<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BookItemLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:contentDescription="@string/bookcover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageButton
        android:id="@+id/favoriteButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@android:drawable/star_off"
        android:background="@android:color/transparent"
        android:contentDescription="@string/favoriteButton"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/textViewBookTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/bookTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintEnd_toStartOf="@id/favoriteButton"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/release_date"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/textViewBookTitle"
        app:layout_constraintStart_toStartOf="@id/textViewBookTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookTitle" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/authorName"
        app:layout_constraintEnd_toEndOf="@id/tvDate"
        app:layout_constraintStart_toStartOf="@id/tvDate"
        app:layout_constraintTop_toBottomOf="@id/tvDate" />


</androidx.constraintlayout.widget.ConstraintLayout>