<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/favoriteBookItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:contentDescription="@string/bookcover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background" />


    <TextView
        android:id="@+id/tvBookTitle"
        app:layout_constraintEnd_toStartOf="@id/favoriteButton"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/bookTitle"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tvAuthor"
        app:layout_constraintEnd_toEndOf="@+id/tvBookTitle"
        app:layout_constraintStart_toStartOf="@+id/tvBookTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvBookTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/authorName" />

    <TextView
        android:id="@+id/tvDate"
        app:layout_constraintEnd_toEndOf="@+id/tvAuthor"
        app:layout_constraintStart_toStartOf="@+id/tvAuthor"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/release_date"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/favoriteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:srcCompat="@android:drawable/star_off"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/favoriteButton" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>